@@ -8,16 +8,12 @@ import java.util.Optional;
 import java.util.stream.Collectors;
 import no.nav.bidrag.commons.web.HttpResponse;
 import no.nav.bidrag.dokument.arkiv.consumer.DokarkivConsumer;
-import no.nav.bidrag.dokument.arkiv.consumer.DokarkivProxyConsumer;
 import no.nav.bidrag.dokument.arkiv.consumer.PersonConsumer;
 import no.nav.bidrag.dokument.arkiv.consumer.SafConsumer;
 import no.nav.bidrag.dokument.arkiv.dto.Bruker;
 import no.nav.bidrag.dokument.arkiv.dto.BrukerType;
 import no.nav.bidrag.dokument.arkiv.dto.EndreJournalpostCommandIntern;
-import no.nav.bidrag.dokument.arkiv.dto.FerdigstillJournalpostRequest;
-import no.nav.bidrag.dokument.arkiv.dto.JournalStatus;
 import no.nav.bidrag.dokument.arkiv.dto.Journalpost;
-import no.nav.bidrag.dokument.arkiv.dto.KnyttTilAnnenSakRequest;
 import no.nav.bidrag.dokument.arkiv.dto.LagreJournalpostRequest;
 import no.nav.bidrag.dokument.arkiv.dto.OppdaterJournalpostDistribusjonsInfoRequest;
 import no.nav.bidrag.dokument.arkiv.dto.OppdaterJournalpostResponse;
@@ -25,8 +21,6 @@ import no.nav.bidrag.dokument.arkiv.dto.PersonResponse;
 import no.nav.bidrag.dokument.arkiv.dto.Sak;
 import no.nav.bidrag.dokument.arkiv.dto.TilknyttetJournalpost;
 import no.nav.bidrag.dokument.arkiv.kafka.HendelserProducer;
-import no.nav.bidrag.dokument.arkiv.model.FerdigstillFeiletException;
-import no.nav.bidrag.dokument.arkiv.model.JournalpostIkkeFunnetException;
 import no.nav.bidrag.dokument.arkiv.model.LagreJournalpostFeiletException;
 import no.nav.bidrag.dokument.arkiv.model.PersonException;
 import no.nav.bidrag.dokument.dto.JournalpostDto;
@@ -41,16 +35,11 @@ public class JournalpostService {
   private final SafConsumer safConsumer;
   private final PersonConsumer personConsumer;
   private final DokarkivConsumer dokarkivConsumer;
-  private final DokarkivProxyConsumer dokarkivProxyConsumer;
-  private final HendelserProducer hendelserProducer;
 
-  public JournalpostService(SafConsumer safConsumer, PersonConsumer personConsumer, DokarkivConsumer dokarkivConsumer,
-      DokarkivProxyConsumer dokarkivProxyConsumer, HendelserProducer hendelserProducer) {
+  public JournalpostService(SafConsumer safConsumer, PersonConsumer personConsumer, DokarkivConsumer dokarkivConsumer) {
     this.safConsumer = safConsumer;
     this.personConsumer = personConsumer;
     this.dokarkivConsumer = dokarkivConsumer;
-    this.dokarkivProxyConsumer = dokarkivProxyConsumer;
-    this.hendelserProducer = hendelserProducer;
   }
 
   public Optional<Journalpost> hentJournalpost(Long journalpostId) {
@@ -75,42 +64,6 @@ public class JournalpostService {
         .map((this::konverterAktoerIdTilFnr))
         .map(Journalpost::tilJournalpostDto)
         .collect(Collectors.toList());
-  }
-
-  public HttpResponse<Void> endre(Long journalpostId, EndreJournalpostCommandIntern endreJournalpostCommand) {
-    var journalpost = hentJournalpost(journalpostId).orElseThrow(
-        () -> new JournalpostIkkeFunnetException("Kunne ikke finne journalpost med id: " + journalpostId)
-    );
-    var oppdatertJournalpostResponse = lagreJournalpost(journalpostId, endreJournalpostCommand, journalpost);
-
-    journalfoerJournalpostNarMottaksregistrert(endreJournalpostCommand, journalpost);
-    tilknyttSakerTilJournalfoertJournalpost(endreJournalpostCommand, journalpost);
-
-    return HttpResponse.from(
-        oppdatertJournalpostResponse.fetchHeaders(),
-        oppdatertJournalpostResponse.getResponseEntity().getStatusCode()
-    );
-  }
-
-  public HttpResponse<OppdaterJournalpostResponse> lagreJournalpost(Long journalpostId, EndreJournalpostCommandIntern endreJournalpostCommand, Journalpost journalpost){
-    var oppdaterJournalpostRequest = new LagreJournalpostRequest(journalpostId, endreJournalpostCommand, journalpost);
-    var oppdatertJournalpostResponse = dokarkivConsumer.endre(oppdaterJournalpostRequest);
-
-    oppdatertJournalpostResponse.fetchBody().ifPresent(response -> LOGGER.info("endret: {}", response));
-
-    if (!oppdatertJournalpostResponse.is2xxSuccessful()){
-      throw new LagreJournalpostFeiletException(String.format("Lagre journalpost feilet for journalpostid %s", journalpostId));
-    }
-
-    if (Objects.nonNull(oppdaterJournalpostRequest.getSak())){
-      journalpost.setSak(new Sak(oppdaterJournalpostRequest.getSak().getFagsakId()));
-    }
-
-    if (endreJournalpostCommand.harGjelder()){
-      hendelserProducer.publishJournalpostUpdated(journalpostId);
-    }
-
-    return oppdatertJournalpostResponse;
   }
 
   public void oppdaterJournalpostDistribusjonBestiltStatus(Long journalpostId, Journalpost journalpost){
@@ -142,7 +95,7 @@ public class JournalpostService {
     return Optional.ofNullable(dokumentInfoId).map(safConsumer::finnTilknyttedeJournalposter).orElse(new ArrayList<>());
   }
 
-  private Journalpost populerMedTilknyttedeSaker(Journalpost journalpost){
+  public Journalpost populerMedTilknyttedeSaker(Journalpost journalpost){
     var journalpostFagsakId = journalpost.getSak() != null ? journalpost.getSak().getFagsakId() : "";
     var tilknytteteJournalposter = hentTilknyttedeJournalposter(journalpost);
     var saker = tilknytteteJournalposter.stream()
@@ -150,8 +103,7 @@ public class JournalpostService {
         .filter(Objects::nonNull)
         .map(Sak::getFagsakId)
         .filter(Objects::nonNull)
-        .filter(fagsakId -> !Objects.equals(fagsakId, journalpostFagsakId))
-        .collect(Collectors.toList());
+        .filter(fagsakId -> !Objects.equals(fagsakId, journalpostFagsakId)).toList();
     var sakerNoDuplicates = new HashSet<>(saker).stream().toList();
     LOGGER.info("Fant {} saker for journalpost {}. Journalposten har {} saker etter fjerning av duplikater", saker.size() + 1, journalpost.getJournalpostId(), sakerNoDuplicates.size() + 1);
     journalpost.setTilknyttedeSaker(sakerNoDuplicates);
@@ -197,38 +149,5 @@ public class JournalpostService {
       throw new PersonException("Det skjedde en feil ved henting av person", HttpStatus.INTERNAL_SERVER_ERROR);
     }
     return personResponse.getResponseEntity().getBody();
-  }
-
-  private void journalfoerJournalpostNarMottaksregistrert(EndreJournalpostCommandIntern endreJournalpostCommand, Journalpost journalpost){
-    if (endreJournalpostCommand.skalJournalfores() && journalpost.isStatusMottatt()) {
-      var journalpostId = journalpost.hentJournalpostIdLong();
-      journalfoerJournalpost(journalpostId, endreJournalpostCommand);
-      journalpost.setJournalstatus(JournalStatus.JOURNALFOERT);
-    }
-  }
-
-  private void tilknyttSakerTilJournalfoertJournalpost(EndreJournalpostCommandIntern endreJournalpostCommand, Journalpost journalpost){
-    if (journalpost.kanTilknytteSaker()) {
-      populerMedTilknyttedeSaker(journalpost);
-      endreJournalpostCommand.hentTilknyttetSaker().stream()
-          .filter(sak -> !journalpost.hentTilknyttetSaker().contains(sak))
-          .collect(Collectors.toSet())
-          .forEach(saksnummer -> tilknyttTilSak(saksnummer, journalpost));
-    }
-  }
-
-  private void tilknyttTilSak(String saksnummer, Journalpost journalpost){
-    KnyttTilAnnenSakRequest knyttTilAnnenSakRequest = new KnyttTilAnnenSakRequest(saksnummer, journalpost);
-    LOGGER.info("Tilknytter sak {} til journalpost {}", saksnummer, journalpost.getJournalpostId());
-    dokarkivProxyConsumer.knyttTilSak(journalpost.hentJournalpostIdLong(), knyttTilAnnenSakRequest);
-  }
-
-  private void journalfoerJournalpost(Long journalpostId, EndreJournalpostCommandIntern endreJournalpostCommand){
-    var journalforRequest = new FerdigstillJournalpostRequest(journalpostId, endreJournalpostCommand.getEnhet());
-    var ferdigstillResponse = dokarkivConsumer.ferdigstill(journalforRequest);
-    if (!ferdigstillResponse.is2xxSuccessful()){
-      throw new FerdigstillFeiletException(String.format("Ferdigstill journalpost feilet for journalpostId %s", journalpostId));
-    }
-    LOGGER.info("Journalpost med id {} er ferdigstillt", journalpostId);
   }
 }
